# discogstagger

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
src/: build.rs  discogs.rs  main.rs  tagger.rs  ui.rs
src/assets/: dist.html  icon.icns  index.html  style.css
