[package]
name = "discogstaggerrs"
version = "0.1.3"
authors = ["Marekkon5"]
license = "MIT"
description = "Tool to tag your audio library using data from Discogs"
homepage = "https://github.com/Marekkon5/discogstagger"
repository = "https://github.com/Marekkon5/discogstagger"
keywords = ["gui", "audio"]
categories = ["multimedia::audio"]
edition = "2018"
build = "src/build.rs"

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
url = "2.2.0"
serde_json = "1.0.59"
chrono = "0.4.19"
walkdir = "2.3.1"
tinyfiledialogs = "3.3.10"
tungstenite = "0.11.1"
crossterm = "0.18.2"
metaflac = "0.2.4"
strsim = "0.10.0"
regex = "1.4.2"
web-view = "0.7.2"
webbrowser = "0.5.5"

# AIFF Support, waiting for merge
id3 = { git = "https://github.com/Marekkon5/rust-id3" }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

# Optimize for size, speed doesn't matter due to rate limiting
# For smaller size use: `strip discogstaggerrs` (Linux/Mac)
# `upx -9 discogstaggerrs` - compress, any OS
# More: https://github.com/johnthagen/min-sized-rust

[profile.release]
opt-level = 'z'
lto = true
# panic = 'abort'

# Bundling, only used for Mac, not tested/used for Linux/Win
[package.metadata.bundle]
name = "DiscogsTagger"
identifier = "com.marekkon5.discogstagger"
icon = ["src/assets/32x32.png", "src/assets/128x128.png", "src/assets/128x128@2x.png", "src/assets/icon.icns", "src/assets/icon.ico"]
version = "0.1.2"
resources = []
copyright = "Copyright (c) Marekkon5 2020. All rights reserved."
category = "Music"
short_description = "Tool to tag your audio library using data from Discogs."
long_description = """
Simple Rust + Webview app to automatically tag your music collection using data from Discogs.
"""
